@startuml
class BaseData{
    Int id
    String name
}


class User{
    String email
    String password

    +login()
    +logout()
    +addCategory()
    +addTask()

}

class Category {
    Int Foreignkey user_id
}


class Task{
    Int Foreignkey category_id
    Int Foreignkey user_id
    String memo

    +complete()
}


BaseData<|---- Category
BaseData<|-- User
BaseData<|---- Task


User "1" -- "0..*" Category
Category "1" -- "0..*" Task

@enduml